# string-view

./: .gitignore  Cargo.toml  README.md
benches/: iter_chars_in_place.rs  replace.rs  replace_every.rs  trim_mut.rs
src/: char.rs  lib.rs  string_view.rs
src/test/: mod.rs
