[package]
name = "string-view"
version = "0.4.2"
edition = "2021"

authors = ["ioannuwu <https://github.com/IoaNNUwU>"]
license= "MIT"

description = "Work with views into string slices. Safely extend, reduce without losing parent string size. Modify str slices in-place to avoid allocations."

repository = "https://github.com/IoaNNUwU/string-view"
homepage = "https://github.com/IoaNNUwU/string-view"

readme = "README.md"

keywords = ["string", "text", "compiler", "parser", "tokenizer"]

# https://crates.io/category_slugs
categories = ["parsing", "text-processing", "template-engine", "no-std::no-alloc", "text-editors"]

[profile.bench]
debug = true

[dev-dependencies]
divan = "0.1.21"

[[bench]]
name = "trim_mut"
harness = false

[[bench]]
name = "replace"
harness = false

[[bench]]
name = "replace_every"
harness = false